<resources>

    <string name="app_name">ANPA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_cancel">Cancelar</string>

    <string name="facebook_app_id">915274545177488</string>
    <string name="fb_login_protocol_scheme">915274545177488</string>

    <string name="txt_news">Noticias</string>
    <string name="txt_tips">Experiencias</string>
    <string name="txt_castration">Castraciones</string>
    <string name="txt_adoption">Perdidos</string>
    <string name="txt_donation">¡Yo Dono!</string>
    <string name="txt_contactus">Contáctanos</string>
    <string name="txt_description_image">Descripción imagen</string>

    <!-- donation -->
    <string name="txt_donation_description">La transacción al donar es el 100% segura, debido a que se realiza mediante la plataforma de Paypal. ¡Gracias por tu colaboración! Para más información podés visitar: http://www.anpacostarica.org/done_aqui</string>
    <string name="txt_donation_link">http://www.anpacostarica.org/done_aqui</string>
    <string name="txt_donation_text1">Deseo donar: $</string>
    <string name="bt_send_donation">¡Donar!</string>
    <string name="bt_send_calculate">Calcular en dólares</string>
    <string name="bt_send_convert">Convertir a dólares</string>
    <string name="txt_donation_exchange_rate">IMPORTANTE: Paypal recibe el pago en dólares americanos ($). El tipo de cambio según el BCCR en este momento es el siguiente:</string>
    <string name="txt_donation_colones">Deseo donar: ¢</string>
    <string name="txt_donation_colones_detail">Acá podés calcular el monto a donar en Colones. Este monto se convertirá a dólares para hacer la donación en Paypal.</string>

    <!-- Castration -->
    <string name="txt_subtitle_castration_date">Fecha:</string>
    <string name="txt_subtitle_schedule">Horario:</string>
    <string name="txt_subtitle_doctor">Doctor:</string>
    <string name="txt_subtitle_attendant">Encargado:</string>
    <string name="txt_subtitle_amount">Monto:</string>
    <string name="txt_subtitle_info">Información Adicional:</string>
    <string name="bt_buton_How_arrive">¿Cómo llegar?</string>
    <string name="bt_buton_add_calendar">Agregar a mi agenda</string>
    <string name="bt_buton_add_facebook">Compartir en mi Facebook</string>

    <!-- Tips -->
    <string name="txt_subtitle_autor">Por:</string>
    <string name="txt_breed_author">Por:</string>
    <string name="txt_public_fb">Compartir en mi Facebook</string>
    <string name="txt_add_tip">Agregar mi experiencia</string>
    <string name="bt_buton_add_tip">Agregar mi experiencia</string>
    <string name="txt_search_tip">Buscar</string>
    <string name="txt_specie">Especie:</string>
    <string name="txt_race">Raza:</string>
    <string name="txt_subtitle_raza_consejo">Raza:</string>
    <string name="txt_list_title_tip">Lista de experiencias</string>
    <string name="txt_disclaimer">*Aclaración: Los contenidos de ésta sección NO son elaborados por personal de ANPA, sino por la comunidad de usuarios. Queda a tu juicio el ponerlos en práctica o no.</string>
    <string name="txt_agrega_consejo">Agrega tu experiencia</string>
    <string name="txt_add_tip_public">Publicar mi experiencia</string>
    <string name="txt_tip_opinion">¿Qué te pareció esta experiencia?</string>


    <!-- Lost -->
    <string name="txt_search_lost">Buscar</string>
    <string name="txt_disclaimer_lost">*Aclaración: Los siguientes anuncios de mascotas pérdidas son elaborados por la comunidad de usuarios.</string>
    <string name="txt_list_title_lost">Lista de perdidos cerca de mi</string>
    <string name="txt_detail_lost_title">Aviso</string>
    <string name="txt_subtitle_nom_mascota">Nombre mascota*: </string>
    <string name="txt_subtitle_especie_mascota">Especie*: </string>
    <string name="txt_subtitle_raza_mascota">Raza*: </string>
    <string name="txt_subtitle_contacto">Contacto*: </string>
    <string name="txt_subtitle_telefono">Teléfono*: </string>
    <string name="txt_subtitle_short_direction">¿Dirección?</string>
    <string name="txt_subtitle_detalle">Detalles de la mascota*: </string>
    <!--    <string name="txt_add_lost">Encontrar a mi mascota</string> -->
    <string name="txt_add_lost">Publicar mi aviso</string>
    <string name="txt_add_lost_photo">Seleccionar Foto</string>
    <string name="txt_subtitle_canton">Cantón*:</string>
    <string name="txt_subtitle_provincia">Provincia*:</string>
    <string name="txt_send_direction">Acepto enviar la ubicación aproximada. (No se mostrará a los demás usuarios. Aparece en las búsquedas con un rango de 5km)</string>




    <!-- Contacts -->
    <string name="txt_description_location">Sabanilla de Montes de Oca, 300 oeste del Mas x Menos frente al residencial La Alahambra edificio esquinero color gris con verde, altos de la veterinaria</string>
    <string name="txt_description_phone1"><u>(+506) 4000-ANPA</u></string>
    <string name="txt_description_phone2"><u>(+506) 2255-2722</u></string>
    <string name="txt_description_mail1">Info: <u>info@anpacostarica.org</u></string>
    <string name="txt_description_mail2">Castrac.: <u>educa@anpacostarica.org</u></string>
    <string name="txt_description_facebook"><u>ANPA-Costa-Rica</u></string>
    <string name="txt_description_twitter"><u>@anpacr</u></string>
    <string name="txt_description_webPage">www.anpacostarica.org</string>
    <string name="txt_title_contact">Información General</string>

    <!-- Confirmation Paypal Text -->
    <string name="txt_amount">Monto:</string>
    <string name="txt_status">Estado:</string>
    <string name="txt_payment_id">Id de pago:</string>

    <string name="txt_loading_castrations">Olfateando castraciones...</string>

    <string name="txt_proximamente">¡Próximamente!</string>

    <string name="txt_title_location_permission">Permiso para usar tu GPS</string>
    <string name="txt_location_permission">Seleccionaste compartir tu ubicación para que tu aviso sea más efectivo. \n Pero necesitamos permiso para usar el GPS.</string>
    <string name="txt_location_accept">Sí, permitir uso de GPS</string>
    <string name="txt_empty_fields">No podés dejar campos vacíos</string>
</resources>
