<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_agrega_consejo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/txt_agrega_consejo"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/ll_specie_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/txt_specie"
            android:textColor="@color/action_bar_background" />

        <Spinner
            android:id="@+id/spn_specie_selector"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@drawable/selector_spinner_title_style" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_race_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_specie_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/txt_race"
            android:textColor="@color/action_bar_background" />

        <Spinner
            android:id="@+id/spn_race_selector"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@drawable/selector_spinner_title_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editxt_description_tip"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:inputType="textMultiLine" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_breed_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_breed_author" />

        <EditText
            android:id="@+id/editxt_breed_author"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/ck_public_fb"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingTop="5dp"
            android:text="@string/txt_public_fb" />

        <ImageView
            android:id="@+id/img_icon_facebook_tip"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/txt_description_image"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/icon_facebook" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/btn_add_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/red"
            android:padding="10dp"
            android:text="@string/txt_add_tip"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>