<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DonationActivity"
    android:background="@drawable/anpa_background"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_description_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_donation_description"
        android:textColor="@android:color/black"
        android:autoLink="web"
        android:padding="10dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/tv_text1_donation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_donation_text1"
            android:textColor="@android:color/black"
            android:paddingRight="5dp" />

        <EditText
            android:id="@+id/et_donation"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_send_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/red"
        android:padding="10dp"
        android:onClick="getPayment"
        android:text="@string/bt_send_donation"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        >

        <ImageView
            android:id="@+id/img_logo_donation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/txt_description_image"
            android:src="@drawable/img_logo_paypal" />

    </RelativeLayout>

</LinearLayout>