<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anpa_background"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_detail_lost_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/txt_add_lost"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_subtitle_nom_mascota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/txt_subtitle_nom_mascota"
                    android:textColor="@color/red" />

                <EditText
                    android:id="@+id/editxt_nom_mascota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_subtitle_especie_mascota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/txt_subtitle_especie_mascota"
                    android:textColor="@color/red" />

                <Spinner
                    android:id="@+id/spn_especieLost_selector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@drawable/selector_spinner_title_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_subtitle_raza_mascota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/txt_subtitle_raza_mascota"
                    android:textColor="@color/red" />

                <Spinner
                    android:id="@+id/spn_razaLost_selector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@drawable/selector_spinner_title_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_subtitle_contacto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:text="@string/txt_subtitle_contacto"
                    android:textColor="@color/red" />

                <EditText
                    android:id="@+id/editxt_contacto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_subtitle_telefono"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:text="@string/txt_subtitle_telefono"
                    android:textColor="@color/red" />

                <EditText
                    android:id="@+id/editxt_telefono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_subtitle_detalle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.4"
                    android:text="@string/txt_subtitle_detalle"
                    android:textColor="@color/red" />

                <EditText
                    android:id="@+id/editxt_detail_lost_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_lost_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/txt_add_lost_photo" />

                <ImageView
                    android:id="@+id/img_detail_lost"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_subtitle_provincia"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.4"
                    android:text="@string/txt_subtitle_provincia"
                    android:textColor="@color/red" />

                <Spinner
                    android:id="@+id/spn_provincia_selector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@drawable/selector_spinner_title_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/txt_subtitle_canton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.4"
                    android:text="@string/txt_subtitle_canton"
                    android:textColor="@color/red" />

                <Spinner
                    android:id="@+id/spn_canton_selector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@drawable/selector_spinner_title_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <CheckBox
                    android:id="@+id/chkDireccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:text="@string/txt_send_direction" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/btn_add_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector_button_style_facebook"
                    android:drawableLeft="@drawable/com_facebook_button_icon"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/com_facebook_button_icon"
                    android:padding="10dp"
                    android:text="@string/bt_buton_add_facebook" />

                <Button
                    android:id="@+id/btn_save_lost"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/btn_add_facebook"
                    android:layout_alignLeft="@+id/btn_add_facebook"
                    android:layout_alignRight="@+id/btn_add_facebook"
                    android:layout_alignStart="@+id/btn_add_facebook"
                    android:layout_below="@+id/btn_add_facebook"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Publicar mi anuncio" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>